--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
 								<article>
 									<header>
 									
+										<h2><a href="https://github.com/abhishek-shetty-512/Covid-Data-Exploration">Data Exploration in SQL<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/abhishek-shetty-512/Covid-Data-Exploration" class="image fit"><img src="images/covid.png" alt="" /></a>
+									<p>Data Exploration of Covid 19 Dataset in MySQL.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/abhishek-shetty-512/Covid-Data-Exploration" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+									
 										<h2><a href="https://public.tableau.com/app/profile/abhishek.shetty1410">Tableau Projects<br />
 										</a></h2>
 									</header>
