--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 										<h2><a href="https://github.com/abhishek-shetty-512/Covid-Data-Exploration">Data Exploration in SQL<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/abhishek-shetty-512/Covid-Data-Exploration" class="image fit"><img src="images/covid.png" alt="" /></a>
+									<a href="https://github.com/abhishek-shetty-512/Covid-Data-Exploration" class="image fit"><img src="images/covid.jpg" alt="" /></a>
 									<p>Data Exploration of Covid 19 Dataset in MySQL.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/abhishek-shetty-512/Covid-Data-Exploration" class="button">View Project</a></li>
